5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4128/executions/1664_2970.log
== TEST (2019-04-16 11:20:10) 
-- CODE:
from math import*

t = int(input("meses"))
qf = 1042000
qo = 1500

i = sqrt*t(q1/qo) -1

if(i <= 0.01):
	print(round(i,5))
	print("Real")
else:
	print(round(i,5))
	print("Irreal")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    i = sqrt*t(q1/qo) -1
NameError: name 'q1' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 11:20:43) 
-- CODE:
from math import*

t = int(input("meses"))
qf = 1042000
qo = 1500

i = sqrt*t(qf/qo) -1

if(i <= 0.01):
	print(round(i,5))
	print("Real")
else:
	print(round(i,5))
	print("Irreal")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    i = sqrt*t(qf/qo) -1
TypeError: 'int' object is not callable
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 11:21:58) 
-- CODE:
from math import*

t = int(input("meses"))
qf = 1042000
qo = 1500

i = sqrt t**(qf/qo) -1

if(i <= 0.01):
	print(round(i,5))
	print("Real")
else:
	print(round(i,5))
	print("Irreal")
-- ERROR:
File "XXXX", line 7
    i = sqrt t**(qf/qo) -1
             ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 11:22:44) 
-- CODE:
from math import*

t = int(input("meses"))
qf = 1042000
qo = 1500

i = t**sqrt(qf/qo) -1

if(i <= 0.01):
	print(round(i,5))
	print("Real")
else:
	print(round(i,5))
	print("Irreal")
-- OUTPUT:
1.8995684114595258e+74
Irreal
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 11:26:14) 
-- CODE:
from math import*

t = int(input("meses"))
qf = 1042000
qo = 1500

i = sqrt(t**(qf/qo)) -1

if(i <= 0.01):
	print(round(i,5))
	print("Real")
else:
	print(round(i,5))
	print("Irreal")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    i = sqrt(t**(qf/qo)) -1
OverflowError: (34, 'Numerical result out of range')
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 11:30:05) 
-- CODE:


t = int(input("meses"))
qf = 1042000
qo = 1500

i = (qf/qo)**(1/t) -1

if(i <= 0.01):
	print(round(i,5))
	print("Real")
else:
	print(round(i,5))
	print("Irreal")
-- OUTPUT:
0.00999
Real
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-16 11:30:20) 
-- CODE:


t = int(input("meses"))
qf = 1042000
qo = 1500

i = (qf/qo)**(1/t) -1

if(i <= 0.01):
	print(round(i,5))
	print("Real")
else:
	print(round(i,5))
	print("Irreal")
-- EXECUTION TIME:
0.247343
-- TEST CASE 1:
---- input:
658
---- correct output:
0.00999
Real
---- user output:
0.00999
Real
-- TEST CASE 2:
---- input:
565
---- correct output:
0.01165
Irreal
---- user output:
0.01165
Irreal
-- TEST CASE 3:
---- input:
240
---- correct output:
0.02764
Irreal
---- user output:
0.02764
Irreal
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
